# django-quill

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: index.md
search/: search_index.json
src/quill/: apps.py  fields.py  settings.py  widgets.py
src/quill/static/quill/css/: styles.css
src/quill/static/quill/js/: script.js
src/quill/templates/quill/: quill.html
