[tool.poetry]
name = "django-quill"
version = "0.1.0"
description = "Quill integration for Django"
authors = ["Lucas Reis <reisdossousalucasedson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "quill", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9 | ^3.10 | ^3.11"
django = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
